--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "school_backend",
+  "name": "backend_global_use",
   "version": "1.0.0",
   "type": "module",
   "description": "",
@@ -24,6 +24,7 @@
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -35,9 +36,6 @@
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "uuid": "^13.0.0",
-    "validator": "^13.15.23",
-    "axios": "^1.6.2",
-    "multer": "^1.4.5-lts.1",
-    "csv-parser": "^3.0.0"
+    "validator": "^13.15.23"
   }
 }
