--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,35 @@
-school_backend@1.0.0 D:\Aiklisolve Projects\School_Project\Back_End\school_backend
-├── chalk@5.6.2
-├── cors@2.8.5
-├── dotenv@17.2.3
-├── express@5.1.0
-├── jsonwebtoken@9.0.2
-├── morgan@1.10.1
-├── nodemon@3.1.11
-├── pg@8.16.3
-└── uuid@13.0.0
+# Backend Global Use - Node.js Project Dependencies
+# Generated from package.json
 
+# Core Framework
+express@5.1.0
+
+# Database
+pg@8.16.3
+
+# Authentication & Security
+jsonwebtoken@9.0.2
+bcrypt@6.0.0
+
+# Environment & Configuration
+dotenv@17.2.3
+
+# Utilities
+uuid@13.0.0
+validator@13.15.23
+chalk@5.6.2
+moment@2.30.1
+moment-timezone@0.6.0
+
+# HTTP & API
+axios@1.6.2
+cors@2.8.5
+
+# File Handling
+multer@1.4.5-lts.1
+pdfkit@0.17.2
+csv-parser@3.0.0
+
+# Logging & Development
+morgan@1.10.1
+nodemon@3.1.11
